Moving forward. Sprite rotation. Starting on Texture Atlas.